--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,11 +1,14 @@
+.body{
+  color: #F8F9FA; 
+}
 .titulo {
-text-align: center;
+  text-align: center;
+  color: #00468D;
 }
 
 .menu{
-    background-color: #EFEFEF;
-    color: #00468D;
-
+  background-color: #EFEFEF;
+  color: #00468D;
 }
 
 .example {
@@ -57,8 +60,7 @@ text-align: center;
     }
   }
 
-
-  .botao {
+  .botao{
     width: 40%;
     height: 40%;
     line-height: 80%;
@@ -70,6 +72,6 @@ text-align: center;
     text-decoration: none;
   }
 
- #funcionario{
-margin-left: 25%;
-}
+  #funcionario{
+    margin-left: 25%;
+  }
